<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="eu.ase.ro.volunteeringresources.ui.home.HomeFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="eu.ase.ro.volunteeringresources.ui.gallery.GalleryFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_resources"
        android:name="eu.ase.ro.volunteeringresources.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_resources"
        tools:layout="@layout/fragment_slideshow" />
</navigation>