<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VolunteeringResources.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tascu_daniel_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/colorPrimary"
            android:paddingTop="4dp"
            app:popupTheme="@style/Theme.VolunteeringResources.PopupOverlay">

            <LinearLayout
                android:id="@+id/tascu_daniel_ll_mainToolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/tascu_daniel_iv_bar_main"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0.5"
                    android:src="@drawable/ic_logo_app_tascu_daniel"
                    android:contentDescription="@string/main_logo_voluntapp" />


                <TextView
                    android:id="@+id/tascu_daniel_voluntapp_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/main_toolbar_title_voluntapp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/tascu_daniel_fab_dark_theme_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/main_toolbar_toggle_dark_theme"
                    android:src="@drawable/baseline_dark_mode_24"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>